--- a/package.json
+++ b/package.json
@@ -4,5 +4,18 @@
   "description": "A mini social network for Community",
   "main": "src/server.ts",
   "author": "hoangvt",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "server": "nodemon src/server.ts"
+  },
+  "dependencies": {
+    "express": "^4.17.2",
+    "mongoose": "^6.1.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
+  }
 }
