--- a/package.json
+++ b/package.json
@@ -9,11 +9,22 @@
     "server": "nodemon src/server.ts"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "mongoose": "^6.1.4"
+    "helmet": "^5.0.1",
+    "hpp": "^0.2.3",
+    "mongoose": "^6.1.4",
+    "morgan": "^1.10.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/hpp": "^0.2.2",
+    "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.3",
+    "cross-env": "^7.0.3",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
