--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
     "cross-env": "^7.0.3",
+    "envalid": "^7.2.2",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
+    "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.4"
   }
 }
