--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "server": "nodemon src/server.ts"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "gravatar": "^1.8.2",
     "helmet": "^5.0.1",
     "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
     "morgan": "^1.10.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/gravatar": "^1.8.3",
     "@types/hpp": "^0.2.2",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
     "cross-env": "^7.0.3",
