--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
     "morgan": "^1.10.0",
-    "normalize-url": "^7.0.3",
+    "node-fetch": "^3.2.0",
+    "normalize-url": "5.3.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
